<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.cardiacare.cardiacare.MainActivity" >
<!--android:showAsAction="withText|ifRoom"-->


    <item
        android:id="@+id/ecg"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/ecg"/>

    <item
        android:id="@+id/menuAbout"
        app:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/passSurvey"
        app:showAsAction="never"
        android:title="@string/pass_survey"/>
    <item
        android:id="@+id/menuHelp"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/help"/>
    <!--   <item
           android:id="@+id/menuDownload"
           android:orderInCategory="100"
           app:showAsAction="never"
           android:title="@string/download"/> -->
       <item
           android:id="@+id/menuUserData"
           android:orderInCategory="100"
           app:showAsAction="never"
           android:title="@string/userdata"/>
    <item
        android:id="@+id/documentsData"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/documents"/>
       <item
           android:id="@+id/exitAccount"
           android:orderInCategory="100"
           app:showAsAction="never"
           android:title="@string/exit"/>

   <!--    <item
           android:id="@+id/menuExit"
           android:orderInCategory="100"
           android:showAsAction="never"
           android:title="@string/exit"/>-->

</menu>
