<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connected_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.cardiacare.cardiacare.MainActivity" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_activity_toolbar_connected"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <FrameLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_margin="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:padding="15dp"
            android:text="@string/start_instruction"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:id="@+id/disconnect"
            android:padding="25dp"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continueConnection"
            android:id="@+id/continueConnection"
            android:padding="25dp"
            android:layout_gravity="center" />

    </LinearLayout>

</RelativeLayout>
