<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    tools:context="MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_activity_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="198dp"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/serveyButton"
            android:background="@drawable/servey"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/docsButton"
            android:background="@drawable/labs"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09">

        <TextView
            android:text="@string/pass_survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:text="@string/documents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sos"
        android:textSize="20sp"
        android:id="@+id/alarmButton"
        android:background="#ff0000"
        android:layout_margin="20dp"
        android:elevation="0dp" />

    <!--android:scaleType="centerCrop"-->
                                          <!--android:layout_gravity="center_horizontal|top"-->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center" > <!--android:layout_below="@+id/imageView1"-->


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:text="@string/start_instruction"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#fff"
            android:gravity="center" /> <!--android:layout_centerInParent="true"-->

        <ListView
            android:id="@+id/ConnectListView"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>
